# drone-detection

./: .dockerignore  .env.docker  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: inference.yaml
demo/: inference.py  inference_jupyter.ipynb  inference_model.ipynb  inference_py.py
drone_detection/: __init__.py  augment_tools.py  bbox_utils.py  check_cuda.py  checks_cuda.py  config.py  cuda_utils.py  image_utils.py  models_utils.py
drone_detection/shared/: pl_model.py  readme.md  train.py  train.yaml  utils.py
models/: yolov10n_best.pt  yolov10n_my-data.pt  yolov10s_best.pt
notebooks/: augment_data.ipynb  markup_data.ipynb  prepare_data.ipynb  splitting_data.ipynb  test_model.ipynb  train_model.ipynb
