# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry]
name = "drone_detection"
version = "0.0.1"
description = "Drone detection project."
authors = ["Daniil Svechnikar"]
readme = "README.md"
repository = "https://github.com/DanilSvechnikar/drone-detection"
classifiers = [
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = "~=3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
mypy = "^1.11.2"
jupyter-contrib-nbextensions = "^0.7.0"
pre-commit = "^3.8.0"


[tool.black]
# https://black.readthedocs.io/en/stable/index.html
target-version = ["py312"]
line-length = 88
color = true

exclude = '''
/(
    \.git
  | \.venv
)/
'''


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 312
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.12
pretty = true
show_traceback = true
color_output = true
exclude = ['tests', '.venv']

allow_redefinition = false
check_untyped_defs = false
disallow_any_generics = true
disallow_incomplete_defs = false
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
